<resources>
    <string name="app_name">InviStation</string>
    <string name="my_events">MY EVENTS</string>
    <string name="log">--------------- LOG ---</string>
    <string name="events_creats">Events Creats :</string>
    <string name="create">create</string>
    <string name="desc">desc</string>
    <string name="selecciona_la_data_del_esdeveniment_a_continuaci">Selecciona la data del esdeveniment a continuació</string>
    <string name="introdueix_la_descripci_del_event">Introdueix la descripció del event</string>
    <string name="selecciona_el_tipus_d_esdeveniment">Selecciona el tipus d\'esdeveniment</string>
    <string name="lanparty">LanParty</string>
    <string name="aniversari">Aniversari</string>
    <string name="cancel">cancel</string>
    <string name="accept">Accept</string>
    <string name="textview">TextView</string>
    <string name="estas_convidat_a_la_meva_festa_d_aniversari">Estas convidat a la meva festa d\'aniversari</string>
    <string name="pincheputo">PINCHEPUTO</string>
    <string name="dia_de_la_festa">Dia de la festa:</string>
    <string name="preparat_per_una_viciada_impresionant">Preparat per una viciada impresionant?</string>


</resources>
